--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "game_of_life",
   "version": "0.1.0",
+  "homepage": "http://saeedet.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "immer": "^9.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
